--- a/WEBSITE/downloads.html
+++ b/WEBSITE/downloads.html
@@ -13,6 +13,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="docs.html">Documentation</a></li>
                     <li><a href="terminal.html">Live Terminal</a></li>
+                    <li><a href="downloads.html">Downloads</a></li>
                 </ul>
             </nav>
         </header>
