--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1>Welcome to WSBSD</h1>
         <nav>
             <ul>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="downloads.html">Downloads</a></li>
                 <li><a href="docs.html">Documentation</a></li>
                 <li><a href="terminal.html">Live Terminal</a></li>
