--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WSBSD - The BSD Evolution</title>
+    <link rel="icon" type="image/x-icon" href="./download (1) - Copy.ico">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
