Add Subdomains page and update navigation links across multiple pages

--- a/subdomians.html
+++ b/subdomians.html
@@ -1,15 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WSBSD - The BSD Evolution</title>
+    <title>WSBSD Subdomains</title>
     <link rel="icon" type="image/x-icon" href="./download (1) - Copy.ico">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to WSBSD</h1>
+        <h1>WSBSD Subdomains</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -20,10 +19,15 @@
             </ul>
         </nav>
     </header>
+
     <section>
-        <h2>WSBSD is Here!</h2>
-        <p>Explore the evolution of BSD. Grab the latest builds, dive into the history, and experiment with interactive BSD environments.</p>
+        <h2>Available Subdomains</h2>
+        <p>The Subdomains Are The Domains For The WSBSD BSD Distros, Not Much.</p>
+        <ul>
+            <li><a href="https://ttsconsulting.github.io/openbsd.wsbsd.org/">openbsd.wsbsd.org</a></li>
+        </ul>
     </section>
+
     <footer>
         <p>&copy; 2025 TTS Consulting. All rights reserved.</p>
     </footer>
