--- a/terminal.html
+++ b/terminal.html
@@ -25,6 +25,7 @@
                 <li><a href="downloads.html">Downloads</a></li>
                 <li><a href="docs.html">Documentation</a></li>
                 <li><a href="terminal.html">Live Terminal</a></li>
+                <li><a href="subdomains.html">Subdomains</a></li>
             </ul>
         </nav>
     </header>
