--- a/downloads.html
+++ b/downloads.html
@@ -15,6 +15,7 @@
                     <li><a href="docs.html">Documentation</a></li>
                     <li><a href="terminal.html">Live Terminal</a></li>
                     <li><a href="downloads.html">Downloads</a></li>
+                    <li><a href="subdomains.html">Subdomains</a></li>
                 </ul>
             </nav>
         </header>
