--- a/downloads.html
+++ b/downloads.html
@@ -16,6 +16,7 @@
                     <li><a href="terminal.html">Live Terminal</a></li>
                     <li><a href="downloads.html">Downloads</a></li>
                     <li><a href="subdomains.html">Subdomains</a></li>
+                    <li><a href="freebsdterminal.html">FreeBSD Live Terminal</a></li>
                 </ul>
             </nav>
         </header>
