--- a/terminal.html
+++ b/terminal.html
@@ -26,6 +26,7 @@
                 <li><a href="docs.html">Documentation</a></li>
                 <li><a href="terminal.html">Live Terminal</a></li>
                 <li><a href="subdomains.html">Subdomains</a></li>
+                <li><a href="freebsdterminal.html">FreeBSD Live Terminal</a></li>
             </ul>
         </nav>
     </header>
