--- a/freebsdterminal.html
+++ b/freebsdterminal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WSBSD Terminal</title>
+    <title>WSBSD FreeBSD Terminal</title>
     <link rel="icon" type="image/x-icon" href="./download (1) - Copy.ico">
     <link rel="stylesheet" href="styles.css">
     <style>
