--- a/terminal.html
+++ b/terminal.html
@@ -27,6 +27,7 @@
                 <li><a href="terminal.html">Live Terminal</a></li>
                 <li><a href="subdomains.html">Subdomains</a></li>
                 <li><a href="freebsdterminal.html">FreeBSD Live Terminal</a></li>
+                <li><a href="netbsdterminal.html">NetBSD Live Terminal</a></li>
             </ul>
         </nav>
     </header>
