--- a/subdomains.html
+++ b/subdomains.html
@@ -18,6 +18,7 @@
                 <li><a href="subdomains.html">Subdomains</a></li>
                 <li><a href="freebsdterminal.html">FreeBSD Live Terminal</a></li>
                 <li><a href="netbsdterminal.html">NetBSD Live Terminal</a></li>
+                <li><a href="dragonflyterminal.html">DragonFly Live Terminal</a></li>
             </ul>
         </nav>
     </header>
