Update page titles to reflect FreeBSD and OpenBSD contexts

--- a/freebsdterminal.html
+++ b/freebsdterminal.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header>
-        <h1>WSBSD Terminal</h1>
+        <h1>WSBSD FreeBSD Terminal</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
