--- a/downloads.html
+++ b/downloads.html
@@ -13,7 +13,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="docs.html">Documentation</a></li>
-                    <li><a href="terminal.html">OpenBSD Live Terminal</a></li>
+                    <li><a href="openbsdterminal.html">OpenBSD Live Terminal</a></li>
                     <li><a href="downloads.html">Downloads</a></li>
                     <li><a href="subdomains.html">Subdomains</a></li>
                     <li><a href="freebsdterminal.html">FreeBSD Live Terminal</a></li>
