Add News page and update navigation links across multiple pages

--- a/dragonflyterminal.html
+++ b/dragonflyterminal.html
@@ -29,6 +29,7 @@
                 <li><a href="freebsdterminal.html">FreeBSD Live Terminal</a></li>
                 <li><a href="netbsdterminal.html">NetBSD Live Terminal</a></li>
                 <li><a href="dragonflyterminal.html">DragonFly Live Terminal</a></li>
+                <li><a href="news.html">News</a></li>
             </ul>
         </nav>
     </header>
