--- a/news.html
+++ b/news.html
@@ -1,15 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WSBSD - The BSD Evolution</title>
-    <link rel="icon" type="image/x-icon" href="./download (1) - Copy.ico">
+    <title>WSBSD News</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body { background: #222; color: #eee; font-family: Arial, sans-serif; }
+        .news-container { max-width: 800px; margin: 40px auto; background: #181818; border-radius: 8px; padding: 24px; box-shadow: 0 2px 8px #0006; }
+        h1, h2, h3 { color: #ffb300; }
+        .news-item { margin-bottom: 2.5em; border-bottom: 1px solid #333; padding-bottom: 1.5em; }
+        .news-date { color: #aaa; font-size: 0.95em; margin-bottom: 0.5em; display: block; }
+        a { color: #4af; }
+        .news-title { margin-bottom: 0.2em; }
+    </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to WSBSD</h1>
+        <h1>WSBSD News</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -24,10 +33,15 @@
             </ul>
         </nav>
     </header>
-    <section>
-        <h2>WSBSD is Here!</h2>
-        <p>Explore the evolution of BSD. Grab the latest builds, dive into the history, and experiment with interactive BSD environments.</p>
-    </section>
+
+    <main>
+        <div class="news-container">
+            <h2>Latest News & Updates</h2>
+            <p>Stay informed with the latest developments in the WSBSD project.</p>
+            <p>No News....... for Now</p>
+        </div>
+    </main>
+
     <footer>
         <p>&copy; 2025 TTS Consulting. All rights reserved.</p>
     </footer>
