--- a/openbsdterminal.html
+++ b/openbsdterminal.html
@@ -29,6 +29,7 @@
                 <li><a href="freebsdterminal.html">FreeBSD Live Terminal</a></li>
                 <li><a href="netbsdterminal.html">NetBSD Live Terminal</a></li>
                 <li><a href="dragonflyterminal.html">DragonFly Live Terminal</a></li>
+                <li><a href="news.html">News</a></li>
             </ul>
         </nav>
     </header>
