--- a/dragonflyterminal.html
+++ b/dragonflyterminal.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WSBSD DragonFly Terminal</title>
+    <link rel="icon" type="image/x-icon" href="./download (1) - Copy.ico">
     <link rel="stylesheet" href="styles.css">
     <style>
         body { background: #222; color: #eee; font-family: monospace; }
