--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a href="netbsdterminal.html">NetBSD Live Terminal</a></li>
                 <li><a href="dragonflyterminal.html">DragonFly Live Terminal</a></li>
                 <li><a href="news.html">News</a></li>
+                <li><a href="annoucements.html">Announcements</a></li>
             </ul>
         </nav>
     </header>
