--- a/annoucements/annoucements.1.0.0.4-4.html
+++ b/annoucements/annoucements.1.0.0.4-4.html
@@ -22,6 +22,14 @@
                 <li><a href="netbsdterminal.html">NetBSD Live Terminal</a></li>
                 <li><a href="dragonflyterminal.html">DragonFly Live Terminal</a></li>
                 <li><a href="news.html">News</a></li>
+                <li><a href="annoucements.html">Announcements</a></li>
+
             </ul>
         </nav>
     </header>
+    <section>
+        <p>We are excited to announce the release of version 1.0.0.4-4 of the WSBSD project.</p>
+        <h1>New BSD Distros</h1>
+        <p>MidnightBSD</p>
+        <p> ok that's all, but this changelog may be changed later...</p>
+    </section>
