Fix link to changelog in announcements page and remove outdated announcement file

--- a/annoucements.html
+++ b/annoucements.html
@@ -49,7 +49,7 @@
                 <span class="announcement-date">June 4th 2025</span>
                 <h3 class="announcement-title">WSBSD 1.0.0.4-4 Announcement</h3>
                 <p>We, TTS Consulting, are pleased to announce 1.0.0.4-4, Focused on Realism, Adding More BSD Distros, and A Full on Kernel In A Single .tar file (HopeFully)</p>
-                <p>Here are the presected changelog: <a href="./annoucements/annoucements.1.0.0.4-4.html">1.0.0.4-4</a></p>
+                <p>Here are the presected changelog: <a href="./annoucements/1.0.0.4-4.html">1.0.0.4-4</a></p>
                 <img src="C:\Users\tadeo\OneDrive\Documents\GitHub\WSBSD-WEBSITE\download (1) - Copy.ico" alt="WSBSD Logo" style="width: 100px; height: 100px;">
             </div>
         </div>
