--- a/404.html
+++ b/404.html
@@ -54,7 +54,7 @@
         <h2>Page Not Found</h2>
         <p>Sorry, the page you are looking for does not exist.<br>
         You may have mistyped the address or the page has been moved.</p>
-        <a class="button404" href="index.html">Go to Homepage</a>
+        <a class="button404" href="./index.html">Go to Homepage</a>
     </div>
 </body>
 </html>
