Update live terminal experience description for clarity

--- a/docs.html
+++ b/docs.html
@@ -34,7 +34,7 @@
             <li>Download the latest WSBSD build from the <a href="downloads.html">Downloads</a> page.</li>
             <li>Follow the MSI to complete the installation.</li>
             <li>After installation, you can access WSBSD from your applications menu.</li>
-            <li>For a live terminal experience, visit the <a href="terminal.html">Live Terminal</a> page. (IT'S ONLY OPENBSD 7.7)</li>
+            <li>For a live terminal experience, visit the live terminals you see on the top of the page and the text should end with 'Live Terminal'</li>
         </ol>
     </section>
 
