--- a/404.html
+++ b/404.html
@@ -43,17 +43,17 @@
     </style>
 </head>
 <body>
-    <div class="center404">
+    <div class="center404">S
         <div class="ascii404">
-404 |¯|__|¯|<br>
-    ( o_o )<br>
-   /|     |\<br>
-   / \   / \
+404 or 403 |¯|__|¯|<br>
+           ( o_o )<br>
+           /|     |\<br>
+           / \   / \
         </div>
-        <h1>404</h1>
-        <h2>Page Not Found</h2>
-        <p>Sorry, the page you are looking for does not exist.<br>
-        You may have mistyped the address or the page has been moved.</p>
+        <h1>404 or 403</h1>
+        <h2>Page Not Found or Gone</h2>
+        <p>Sorry, the page you are looking for does not exist, or may be gone forever.<br>
+        You may have mistyped the address or the page has been moved, or the makers of this website deleted the content.</p>
         <a class="button404" href="./index.html">Go to Homepage</a>
     </div>
 </body>
