Fix typo in 404 page HTML structure

--- a/404.html
+++ b/404.html
@@ -43,7 +43,7 @@
     </style>
 </head>
 <body>
-    <div class="center404">S
+    <div class="center404">
         <div class="ascii404">
 404 or 403 |¯|__|¯|<br>
            ( o_o )<br>
