--- a/annoucements/1.0.0.4-4.html
+++ b/annoucements/1.0.0.4-4.html
@@ -33,3 +33,8 @@
         <p>MidnightBSD</p>
         <p> ok that's all, but this changelog may be changed later...</p>
     </section>
+    <footer>
+        <p>&copy; 2025 TTS Consulting. All rights reserved.</p>
+    </footer>
+    </body>
+</html>
