--- a/annoucements/1.0.0.4-4.html
+++ b/annoucements/1.0.0.4-4.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>1.0.0.4-4 Announcement</title>
-        <link rel="icon" type="image/x-icon" href="./download (1) - Copy.ico">
+        <link rel="icon" type="image/x-icon" href="./download (1) - Copy 2.ico">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
