--- a/openbsdterminal.html
+++ b/openbsdterminal.html
@@ -31,6 +31,7 @@
                 <li><a href="dragonflyterminal.html">DragonFly Live Terminal</a></li>
                 <li><a href="news.html">News</a></li>
                 <li><a href="annoucements.html">Announcements</a></li>
+                <li><a href="mignightbsdterminal.html">MidnightBSD Live Terminal</a></li>
             </ul>
         </nav>
     </header>
