Update OS information to reflect MidnightBSD version in terminal output

--- a/mignightbsdterminal.html
+++ b/mignightbsdterminal.html
@@ -135,7 +135,7 @@ WSBSD BSD LOADER V1.0.0.4
 System Uptime: ${getUptime()}
 User: browser
 Machine: web
-OS: FakeBSD 1.0 (Browser)
+OS: MidnightBSD 3.6.3
 Kernel: JS Kernel
 Shell: JS Shell
 CPU: Browser
@@ -194,7 +194,7 @@ System Info Loaded.
     });
 
     window.onload = function() {
-        print("WSBSD FreeBSD Live Terminal (Browser Edition)\nType 'help' to see available commands.");
+        print("WSBSD MidnightBSD Live Terminal (Browser Edition)\nType 'help' to see available commands.");
         input.focus();
     }
     </script>
