--- a/mignightbsdterminal.html
+++ b/mignightbsdterminal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WSBSD FreeBSD Terminal</title>
+    <title>WSBSD MidnightBSD Terminal</title>
     <link rel="icon" type="image/x-icon" href="./download (1) - Copy.ico">
     <link rel="stylesheet" href="styles.css">
     <style>
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header>
-        <h1>WSBSD FreeBSD Terminal</h1>
+        <h1>WSBSD MidnightBSD Terminal</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
