--- a/mignightbsdterminal.html
+++ b/mignightbsdterminal.html
@@ -49,6 +49,9 @@
     <footer>
         <p>&copy; 2025 TTS Consulting. All rights reserved.</p>
     </footer>
+    <section>
+        <p>This is a preview of WSBSD 1.0.0.4-4</p>
+    </section>
     <script>
     // Simple browser-based fake terminal
     const output = document.getElementById('output');
