Update downloads and news pages for WSBSD 1.0.0.4-4 release

--- a/downloads.html
+++ b/downloads.html
@@ -30,8 +30,8 @@
             <h2>Download the Latest Builds</h2>
             <p>Choose from the latest WSBSD builds below:</p>
             <ul>
-                <li><a href="hhttps://github.com/TTSConsulting/WSBSD/releases/download/1.0.0.4-3/WSBSD.exe">WSBSD 1.0.0.4-3 Digital Release</a></li>
-                <li><a href="https://github.com/TTSConsulting/WSBSD/releases/download/1.0.0.4-3/WSBSD-10043-DVD-CD-ISO.ISO">WSBSD 1.0.0.4-3 Physical Release</a></li>
+                <li><a href="https://github.com/TTSConsulting/WSBSD/releases/download/1.0.0.4-4/WSBSD.exe">WSBSD 1.0.0.4-4 Digital Release</a></li>
+                <li><a href="https://github.com/TTSConsulting/WSBSD/releases/download/1.0.0.4-4/WSBSD-10044-DVD-CD-ISO.ISO">WSBSD 1.0.0.4-4 Physical Release</a></li>
             </ul>
         </section>
 
