--- a/news.html
+++ b/news.html
@@ -42,6 +42,12 @@
             <h2>Latest News & Updates</h2>
             <p>Stay informed with the latest developments in the WSBSD project.</p>
             <p>No News....... for Now</p>
+            <div class="news-item">
+                <span class="news-date">June 4th 2025</span>
+                <h3 class="news-title">WSBSD 1.0.0.4-4 Releases</h3>
+                <p>WSBSD 1.0.0.4-4 is now available for download. This release includes various bug fixes and performance improvements.</p>
+                <p> Here's The Full changelog At GitHub: <a href="https://github.com/TTSConsulting/WSBSD/compare/1.0.0.4-3...1.0.0.4-4">https://github.com/TTSConsulting/WSBSD/compare/1.0.0.4-3...1.0.0.4-4</a></p>
+            </div>
         </div>
     </main>
 
