--- a/downloads.html
+++ b/downloads.html
@@ -33,6 +33,7 @@
                 <li><a href="https://github.com/TTSConsulting/WSBSD/releases/download/1.0.0.4-4/WSBSD.exe">WSBSD 1.0.0.4-4 Digital Release</a></li>
                 <li><a href="https://github.com/TTSConsulting/WSBSD/releases/download/1.0.0.4-4/WSBSD-10044-DVD-CD-ISO.ISO">WSBSD 1.0.0.4-4 Physical Release</a></li>
             </ul>
+            <p>INFO: All Versions In The 1.0.0.4-x Series Are Evaluation Copies Inculding Digital and Physical Copies.</p>
         </section>
 
         <footer>
