Add news page and WSBSD logo to index

--- a/10044.html
+++ b/10044.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WSBSD - The BSD Evolution</title>
+    <title>WSBSD News</title>
     <link rel="icon" type="image/x-icon" href="./download (1) - Copy.ico">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to WSBSD</h1>
+        <h1>WSBSD 1.0.0.4-4</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -26,11 +26,14 @@
             </ul>
         </nav>
     </header>
-    <section>
-        <h2>WSBSD is Here!</h2>
-        <p>Explore the evolution of BSD. Grab the latest builds, dive into the history, and experiment with interactive BSD environments.</p>
-        <img src="./download (1) - Copy (wsbsd.org edition).png" alt="WSBSD Logo"><a href=""></a></img>
-    </section>
+<section>
+    <h2>WSBSD 1.0.0.4-4</h2>
+    <p>Here Are The Download Links:</p>
+    <ul>
+     <li><a href="https://github.com/TTSConsulting/WSBSD/releases/download/1.0.0.4-4/WSBSD.exe">WSBSD 1.0.0.4-4 Digital Release</a></li>
+     <li><a href="https://github.com/TTSConsulting/WSBSD/releases/download/1.0.0.4-4/WSBSD-10044-DVD-CD-ISO.ISO">WSBSD 1.0.0.4-4 Physical Release</a></li>
+    </ul>
+</section>
     <footer>
         <p>&copy; 2025 TTS Consulting. All rights reserved.</p>
     </footer>
