--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section>
         <h2>WSBSD is Here!</h2>
         <p>Explore the evolution of BSD. Grab the latest builds, dive into the history, and experiment with interactive BSD environments.</p>
-        <img src="./download (1) - Copy (wsbsd.org edition).png" alt="WSBSD Logo"><a href=""></a></img>
+        <a href="./10044.html"><img src="./download (1) - Copy.png" alt="WSBSD 1.0.0.4-4"></a>
     </section>
     <footer>
         <p>&copy; 2025 TTS Consulting. All rights reserved.</p>
