Add width and height attributes to WSBSD image for better layout control

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section>
         <h2>WSBSD is Here!</h2>
         <p>Explore the evolution of BSD. Grab the latest builds, dive into the history, and experiment with interactive BSD environments.</p>
-        <a href="./10044.html"><img src="./download (1) - Copy.png" alt="WSBSD 1.0.0.4-4"></a>
+        <a href="./10044.html"><img src="./download (1) - Copy.png" alt="WSBSD 1.0.0.4-4" width="204" height="192"></a>
     </section>
     <footer>
         <p>&copy; 2025 TTS Consulting. All rights reserved.</p>
