Fix navigation links in 1.0.0.4-4 announcement page to use relative paths

--- a/annoucements/1.0.0.4-4.html
+++ b/annoucements/1.0.0.4-4.html
@@ -13,17 +13,17 @@
         <h1>WSBSD Announcements: 1.0.0.4-4 Announcement</h1>
          <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="downloads.html">Downloads</a></li>
-                <li><a href="docs.html">Documentation</a></li>
-                <li><a href="openbsdterminal.html">OpenBSD Live Terminal</a></li>
-                <li><a href="subdomains.html">Subdomains</a></li>
-                <li><a href="freebsdterminal.html">FreeBSD Live Terminal</a></li>
-                <li><a href="netbsdterminal.html">NetBSD Live Terminal</a></li>
-                <li><a href="dragonflyterminal.html">DragonFly Live Terminal</a></li>
-                <li><a href="news.html">News</a></li>
-                <li><a href="annoucements.html">Announcements</a></li>
-                <li><a href="mignightbsdterminal.html">MidnightBSD Live Terminal</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../downloads.html">Downloads</a></li>
+                <li><a href="../docs.html">Documentation</a></li>
+                <li><a href="../openbsdterminal.html">OpenBSD Live Terminal</a></li>
+                <li><a href="../subdomains.html">Subdomains</a></li>
+                <li><a href="../freebsdterminal.html">FreeBSD Live Terminal</a></li>
+                <li><a href="../netbsdterminal.html">NetBSD Live Terminal</a></li>
+                <li><a href="../dragonflyterminal.html">DragonFly Live Terminal</a></li>
+                <li><a href="../news.html">News</a></li>
+                <li><a href="../annoucements.html">Announcements</a></li>
+                <li><a href="../mignightbsdterminal.html">MidnightBSD Live Terminal</a></li>
 
             </ul>
         </nav>
