Restore local image source for WSBSD logo in announcements.html

--- a/annoucements.html
+++ b/annoucements.html
@@ -51,7 +51,7 @@
                 <h3 class="announcement-title">WSBSD 1.0.0.4-4 Announcement</h3>
                 <p>We, TTS Consulting, are pleased to announce 1.0.0.4-4, Focused on Realism, Adding More BSD Distros, and A Full on Kernel In A Single .tar file (HopeFully)</p>
                 <p>Here are the presected changelog: <a href="./annoucements/1.0.0.4-4.html">1.0.0.4-4</a></p>
-                <img src="https://github.com/TTSConsulting/WSBSD/blob/main/download%20(1)%20-%20Copy.gif" alt="WSBSD Logo" style="width: 100px; height: 100px;">
+                <img src="download (1) - Copy (wsbsd.org edition).gif" alt="WSBSD Logo" style="width: 100px; height: 100px;">
             </div>
         </div>
     </main>
