Fix capitalization in footer copyright notice and update info paragraph in 10044.html

--- a/10044.html
+++ b/10044.html
@@ -33,9 +33,10 @@
      <li><a href="https://github.com/TTSConsulting/WSBSD/releases/download/1.0.0.4-4/WSBSD.exe">WSBSD 1.0.0.4-4 Digital Release</a></li>
      <li><a href="https://github.com/TTSConsulting/WSBSD/releases/download/1.0.0.4-4/WSBSD-10044-DVD-CD-ISO.ISO">WSBSD 1.0.0.4-4 Physical Release</a></li>
     </ul>
+    <p>INFO; The Download Are Also In <a href="downloads.html">downloads.html</a></p>
 </section>
     <footer>
-        <p>&copy; 2025 TTS Consulting. All rights reserved.</p>
+        <p>&copy; 2025 TTS Consulting. All Rights reserved.</p>
     </footer>
 </body>
 </html>
