--- a/10044.html
+++ b/10044.html
@@ -33,7 +33,7 @@
      <li><a href="https://github.com/TTSConsulting/WSBSD/releases/download/1.0.0.4-4/WSBSD.exe">WSBSD 1.0.0.4-4 Digital Release</a></li>
      <li><a href="https://github.com/TTSConsulting/WSBSD/releases/download/1.0.0.4-4/WSBSD-10044-DVD-CD-ISO.ISO">WSBSD 1.0.0.4-4 Physical Release</a></li>
     </ul>
-    <p>INFO; The Download Are Also In <a href="downloads.html">downloads.html</a></p>
+    <p>INFO: The Download Are Also In <a href="downloads.html">downloads.html</a></p>
 </section>
     <footer>
         <p>&copy; 2025 TTS Consulting. All Rights reserved.</p>
