Add style inspiration note to documentation section in docs.html

--- a/docs.html
+++ b/docs.html
@@ -37,6 +37,7 @@
             <li>After installation, you can access WSBSD from your applications menu.</li>
             <li>For a live terminal experience, visit the live terminals you see on the top of the page and the text should end with 'Live Terminal'</li>
         </ol>
+        <p>The Style This website Uses Is Inspired By <a href="https://www.openbsd.org">openbsd.org</a>'s Style</p>
     </section>
 
     <footer>
