Add vscode.wsbsd.org to available subdomains list in subdomains.html

--- a/subdomains.html
+++ b/subdomains.html
@@ -32,6 +32,7 @@
         <ul>
             <li><a href="https://ttsconsulting.github.io/openbsd.wsbsd.org/">openbsd.wsbsd.org</a></li>
             <li><a href="https://ttsconsulting.github.io/sourcecode.wsbsd.org/">sourcecode.wsbsd.org</a></li>
+            <li><a href="https://ttsconsulting.github.io/vscode.wsbsd.org/">vscode.wsbsd.org</a></li>
         </ul>
     </section>
 
