--- a/annoucements.html
+++ b/annoucements.html
@@ -53,6 +53,13 @@
                 <p>Here are the presected changelog: <a href="./annoucements/1.0.0.4-4.html">1.0.0.4-4</a></p>
                 <img src="download (1) - Copy (wsbsd.org edition).gif" alt="WSBSD Logo" style="width: 100px; height: 100px;">
             </div>
+            <div class="announcement-item">
+                <span class="announcement-date">June 8th 2025</span>
+                <h3 class="announcement-title">WSBSD 1.0.0.4-5 Announcement</h3>
+                <p>We, TTS Consulting, are pleased to announce 1.0.0.4-5, Focused on A Launcher both CLI and GUI (Hopefully)</p>
+                <p>Here are the presected changelog: <a href="./annoucements/1.0.0.4-5.html">1.0.0.4-5</a></p>
+                <img src="download (1) - Copy (wsbsd.org edition).gif" alt="WSBSD Logo" style="width: 100px; height: 100px;">
+            </div>
         </div>
     </main>
 
