Update announcement for WSBSD version 1.0.0.4-5 to include new app xclock

--- a/annoucements/1.0.0.4-5.html
+++ b/annoucements/1.0.0.4-5.html
@@ -30,7 +30,7 @@
         <section>
             <p>We are excited to announce the release of version 1.0.0.4-5 of the WSBSD project.</p>
             <h2>New Apps</h2>
-            <p>WSNSD Launcher</p>
+            <p>xclock</p>
             <p> ok that's all, but this changelog may be changed later...</p>
         </section>
         <footer>
