Add news item about the delay of WSBSD 1.0.0.4-5 release

--- a/news.html
+++ b/news.html
@@ -47,6 +47,11 @@
                 <p>WSBSD 1.0.0.4-4 is now available for download. This release includes various bug fixes and performance improvements.</p>
                 <p> Here's The Full changelog At GitHub: <a href="https://github.com/TTSConsulting/WSBSD/compare/1.0.0.4-3...1.0.0.4-4">https://github.com/TTSConsulting/WSBSD/compare/1.0.0.4-3...1.0.0.4-4</a></p>
             </div>
+            <div class="news-item">
+                <span class="news-date">May 14th 2025</span>
+                <h3 class="news-title">WSBSD 1.0.0.4-5  Is Delayed</h3>
+                <p>We regret to inform you that the release of WSBSD 1.0.0.4-5 has been delayed. We have a busy summer ahead of us, the estimated release date is now August 31st 2025. Sorry the delay will be long. We Are now pausing the WSBSD Project and 1.0.0.4-5 brainstorming.</p>
+            </div>
         </div>
     </main>
 
