--- a/news.html
+++ b/news.html
@@ -16,6 +16,7 @@
         a { color: #4af; }
         .news-title { margin-bottom: 0.2em; }
     </style>
+    <link rel="alternate" type="application/rss+xml" title="WSBSD News Feed" href="feed.xml">
 </head>
 <body>
     <header>
