Add news item for WSBSD 1.0.0.4-5 delay lift in news.html and feed.xml

--- a/news.html
+++ b/news.html
@@ -53,7 +53,11 @@
                 <h3 class="news-title">WSBSD 1.0.0.4-5  Is Delayed</h3>
                 <p>We regret to inform you that the release of WSBSD 1.0.0.4-5 has been delayed. We have a busy summer ahead of us, the estimated release date is now August 31st 2025. Sorry the delay will be long. We Are now pausing the WSBSD Project and 1.0.0.4-5 brainstorming.</p>
             </div>
-        </div>
+            <div class="news-item">
+                <span class="news-date">June 17th 2025</span>
+                <h3 class="news-title">WSBSD 1.0.0.4-5 Delay Stops</h3>
+                <p>We are pleased to announce that the delay for WSBSD 1.0.0.4-5 has been lifted. Development is back on track, and we are working hard to meet the new release date. Looks Like Our Busy summer is shorter then expected!</p>
+            </div>
     </main>
 
     <footer>
