--- a/annoucements/1.0.0.4-5.html
+++ b/annoucements/1.0.0.4-5.html
@@ -30,7 +30,7 @@
         <section>
             <p>We are excited to announce the release of version 1.0.0.4-5 of the WSBSD project.</p>
             <h2>New Apps</h2>
-            <p>xclock</p>
+            <p>WSBSD Player v1</p>
             <h3>New BSD Versions</h3>
             <p>FreeBSD 14.3</p>
             <p> ok that's all, but this changelog may be changed later...</p>
