--- a/subdomains.html
+++ b/subdomains.html
@@ -33,7 +33,7 @@
             <li><a href="https://ttsconsulting.github.io/openbsd.wsbsd.org/">openbsd.wsbsd.org</a></li>
             <li><a href="https://ttsconsulting.github.io/sourcecode.wsbsd.org/">sourcecode.wsbsd.org</a></li>
             <li><a href="https://ttsconsulting.github.io/vscode.wsbsd.org/">vscode.wsbsd.org</a></li>
-            <li><a href="https://ttsconsulting.github.io/player.wsbsd.org/">player.wsbsd.org</a><p> (YOU WILL SEE A 404 ERROR BECAUSE IT'S IN THE WORKS!)</p></li>
+            <li><a href="https://ttsconsulting.github.io/player.wsbsd.org/">player.wsbsd.org</a></li>
         </ul>
     </section>
 
