Add release announcement for WSBSD 1.0.0.4-5 in news.html and feed.xml

--- a/news.html
+++ b/news.html
@@ -58,6 +58,13 @@
                 <h3 class="news-title">WSBSD 1.0.0.4-5 Delay Stops</h3>
                 <p>We are pleased to announce that the delay for WSBSD 1.0.0.4-5 has been lifted. Development is back on track, and we are working hard to meet the new release date. Looks Like Our Busy summer is shorter then expected!</p>
             </div>
+            <div class="news-item">
+                <span class="news-date">July 31st 2025</span>
+                <h3 class="news-title">WSBSD 1.0.0.4-5 Releases</h3>
+                <p>We are excited to announce that WSBSD 1.0.0.4-5 has been released! This version includes several new features and improvements. Thank you for your patience during the development process.</p>
+                <p>The Reason Why it took so long is of busy summer and laziness</p>
+                <p> Here's The Full changelog At GitHub: <a href="https://github.com/TTSConsulting/WSBSD/compare/1.0.0.4-4...1.0.0.4-5">https://github.com/TTSConsulting/WSBSD/compare/1.0.0.4-4...1.0.0.4-5</a></p>
+            </div>
     </main>
 
     <footer>
