Add WSBSD 1.0.0.4-5 release page and update index.html link

--- a/10045.html
+++ b/10045.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WSBSD - The BSD Evolution</title>
+    <title>WSBSD 1.0.0.4-5</title>
     <link rel="icon" type="image/x-icon" href="./download (1) - Copy.ico">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to WSBSD</h1>
+        <h1>WSBSD 1.0.0.4-5</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -26,13 +26,17 @@
             </ul>
         </nav>
     </header>
-    <section>
-        <h2>WSBSD is Here!</h2>
-        <p>Explore the evolution of BSD. Grab the latest builds, dive into the history, and experiment with interactive BSD environments.</p>
-        <a href="./10045.html"><img src="./download (1) - Copy (wsbsd.org edition).gif" alt="WSBSD 1.0.0.4-5" width="204" height="192"></a>
-    </section>
+<section>
+    <h2>WSBSD 1.0.0.4-5</h2>
+    <p>Here Are The Download Links:</p>
+    <ul>
+     <li><a href="https://github.com/TTSConsulting/WSBSD/releases/download/1.0.0.4-5/WSBSD.exe">WSBSD 1.0.0.4-5 Digital Release</a></li>
+     <li><a href="https://github.com/TTSConsulting/WSBSD/releases/download/1.0.0.4-5/WSBSD-10045-DVD-CD-ISO.ISO">WSBSD 1.0.0.4-5 Physical Release</a></li>
+    </ul>
+    <p>INFO: The Download Are Also In <a href="downloads.html">downloads.html</a></p>
+</section>
     <footer>
-        <p>&copy; 2025 TTS Consulting. All rights reserved.</p>
+        <p>&copy; 2025 TTS Consulting. All Rights reserved.</p>
     </footer>
 </body>
 </html>
