Add wiki subdomain link to the available subdomains list in subdomains.html

--- a/subdomains.html
+++ b/subdomains.html
@@ -34,6 +34,7 @@
             <li><a href="https://ttsconsulting.github.io/sourcecode.wsbsd.org/">sourcecode.wsbsd.org</a></li>
             <li><a href="https://ttsconsulting.github.io/vscode.wsbsd.org/">vscode.wsbsd.org</a></li>
             <li><a href="https://ttsconsulting.github.io/player.wsbsd.org/">player.wsbsd.org</a></li>
+            <li><a href="https://ttsconsulting.github.io/wiki.wsbsd.org/">wiki.wsbsd.org</a></li>
         </ul>
     </section>
 
