Add WSBSD 1.0.0.4 announcement details to announcements.html and feed.xml; create dedicated announcement page

--- a/annoucements.html
+++ b/annoucements.html
@@ -60,6 +60,13 @@
                 <p>Here are the presected changelog: <a href="./annoucements/1.0.0.4-5.html">1.0.0.4-5</a></p>
                 <img src="download (1) - Copy (wsbsd.org edition).gif" alt="WSBSD Logo" style="width: 100px; height: 100px;">
             </div>
+            <div class="announcement-item">
+                <span class="announcement-date">August 11th 2025</span>
+                <h3 class="announcement-title">WSBSD 1.0.0.4 Announcement</h3>
+                <p>We, TTS Consulting, are pleased to announce 1.0.0.4, Focused On Adding Login screens To Supported BSD Distros and More</p>
+                <p>Here are the presected changelog: <a href="./annoucements/1.0.0.4.html">1.0.0.4</a></p>
+                <img src="./download (1) - Copy (wsbsd.org edition).gif" alt="WSBSD Logo" style="width: 100px; height: 100px;">
+            </div>
         </div>
     </main>
 
